--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.22.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "marufmax/emoticon-php": "^1.0",
         "predis/predis": "^2.0"
     },
     "require-dev": {
